--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "bootstrap": "^5.3.6"
+        "bootstrap": "^5.3.6",
+        "vercel": "^42.2.0"
     }
 }
