--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "public/build",
-  "ignoreCommand": "[ -f artisan ] && echo 'Skip backend build' || exit 0"
+  "outputDirectory": "public/build"
 }
