--- a/.env
+++ b/.env
@@ -1,8 +1,13 @@
-APP_NAME=Laravel
-APP_ENV=local
+# APP_NAME=Laravel
+# APP_ENV=local
+# APP_KEY=base64:0+kQNmjEc9HBagVSPoAPLSjyDUbnc+wr/3fqMRXa4Ew=
+# APP_DEBUG=true
+# APP_URL=http://localhost
+
+APP_ENV=production
+APP_DEBUG=false
 APP_KEY=base64:0+kQNmjEc9HBagVSPoAPLSjyDUbnc+wr/3fqMRXa4Ew=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://manual-generator/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
