--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 APP_ENV=production
 APP_DEBUG=false
 APP_KEY=base64:0+kQNmjEc9HBagVSPoAPLSjyDUbnc+wr/3fqMRXa4Ew=
-APP_URL=http://manual-generator/
+APP_URL=https://manual-generator.onrender.com
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
