--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # APP_URL=http://localhost
 
 APP_ENV=production
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=base64:0+kQNmjEc9HBagVSPoAPLSjyDUbnc+wr/3fqMRXa4Ew=
 APP_URL=https://manual-generator.onrender.com
 
