--- a/.env
+++ b/.env
@@ -25,14 +25,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=0.0.0.0
-DB_PORT=3306
-DB_DATABASE=manually
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=null
+# DB_HOST=0.0.0.0
+# DB_PORT=3306
+# DB_DATABASE=manually
+# DB_USERNAME=root
+# DB_PASSWORD=
 
-SESSION_DRIVER=database
+
+
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -40,9 +42,13 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+# QUEUE_CONNECTION=database
+QUEUE_CONNECTION=sync
 
-CACHE_STORE=database
+
+# CACHE_STORE=database
+CACHE_STORE=file
+
 # CACHE_PREFIX=
 
 MEMCACHED_HOST=0.0.0.0
