--- a/.env
+++ b/.env
@@ -25,7 +25,11 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=null
+
+DB_CONNECTION=sqlite
+DB_DATABASE=/app/database/database.sqlite
+
+# DB_CONNECTION=null
 # DB_HOST=0.0.0.0
 # DB_PORT=3306
 # DB_DATABASE=manually
