--- a/.env
+++ b/.env
@@ -26,19 +26,19 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 
-DB_CONNECTION=sqlite
-DB_DATABASE=/app/database/database.sqlite
+# DB_CONNECTION=sqlite
+# DB_DATABASE=/app/database/database.sqlite
 
-# DB_CONNECTION=null
-# DB_HOST=0.0.0.0
-# DB_PORT=3306
-# DB_DATABASE=manually
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=0.0.0.0
+DB_PORT=8080
+DB_DATABASE=manually
+DB_USERNAME=root
+DB_PASSWORD=
 
 
 
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -46,12 +46,12 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-# QUEUE_CONNECTION=database
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
+# QUEUE_CONNECTION=sync
 
 
-# CACHE_STORE=database
-CACHE_STORE=file
+CACHE_STORE=database
+# CACHE_STORE=file
 
 # CACHE_PREFIX=
 
